--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -7,10 +7,16 @@
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item">
               <a routerLink="/days" class="btn btn-info">List Days</a>
-                </li>
+            </li>
             <li class="list-inline-item">
               <a routerLink="/addDay" class="btn btn-info">Add Day</a>
-                </li>
+            </li>
+            <li class="list-inline-item">
+              <a routerLink="/cinemas" class="btn btn-info">List cinemas</a>
+            </li>
+            <li class="list-inline-item">
+              <a routerLink="/addCinema" class="btn btn-info">Add Cinema</a>
+            </li>
           </ul>
         </div>
       </div>
