Stable: added halls

--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -17,6 +17,12 @@
             <li class="list-inline-item">
               <a routerLink="/addCinema" class="btn btn-info">Add Cinema</a>
             </li>
+            <li class="list-inline-item">
+              <a routerLink="/moviehalls" class="btn btn-info">List movie halls</a>
+            </li>
+            <li class="list-inline-item">
+              <a routerLink="/addmoviehall" class="btn btn-info">Add movie hall</a>
+            </li>
           </ul>
         </div>
       </div>
