Begin adding movies

--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -6,22 +6,7 @@
           <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item">
-              <a routerLink="/days" class="btn btn-info">List Days</a>
-            </li>
-            <li class="list-inline-item">
-              <a routerLink="/addDay" class="btn btn-info">Add Day</a>
-            </li>
-            <li class="list-inline-item">
-              <a routerLink="/cinemas" class="btn btn-info">List cinemas</a>
-            </li>
-            <li class="list-inline-item">
-              <a routerLink="/addCinema" class="btn btn-info">Add Cinema</a>
-            </li>
-            <li class="list-inline-item">
-              <a routerLink="/moviehalls" class="btn btn-info">List movie halls</a>
-            </li>
-            <li class="list-inline-item">
-              <a routerLink="/addmoviehall" class="btn btn-info">Add movie hall</a>
+              <a routerLink="/hallPlanningService" class="btn btn-info">Hall Planning Service</a>
             </li>
           </ul>
         </div>
