Added movie search functionality

--- a/frontend/frontend/src/app/component/HallPlanning/hall-planning-service/hall-planning-service.component.html
+++ b/frontend/frontend/src/app/component/HallPlanning/hall-planning-service/hall-planning-service.component.html
@@ -26,6 +26,9 @@
               <li class="list-inline-item">
                 <a routerLink="/movie" class="btn btn-info">List Movies</a>
               </li>
+              <li class="list-inline-item">
+                <a routerLink="/searchMovie" class="btn btn-info">Add Movie</a>
+              </li>
             </ul>
           </div>
         </div>
