Added Calender: TODO fill in

--- a/frontend/frontend/src/app/component/HallPlanning/hall-planning-service/hall-planning-service.component.html
+++ b/frontend/frontend/src/app/component/HallPlanning/hall-planning-service/hall-planning-service.component.html
@@ -9,9 +9,6 @@
                 <a routerLink="/days" class="btn btn-info">List Days</a>
               </li>
               <li class="list-inline-item">
-                <a routerLink="/addDay" class="btn btn-info">Add Day</a>
-              </li>
-              <li class="list-inline-item">
                 <a routerLink="/cinemas" class="btn btn-info">List cinemas</a>
               </li>
               <li class="list-inline-item">
@@ -28,6 +25,9 @@
               </li>
               <li class="list-inline-item">
                 <a routerLink="/searchMovie" class="btn btn-info">Add Movie</a>
+              </li>
+              <li class="list-inline-item">
+                <a routerLink="/showPlanning" class="btn btn-info">show Planning</a>
               </li>
             </ul>
           </div>
