--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -7,6 +7,7 @@
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item">
               <a routerLink="/hallPlanningService" class="btn btn-info">Hall Planning Service</a>
+              <a routerLink="/ticketService" class="btn btn-info">Ticket Service</a>
             </li>
           </ul>
         </div>
