added frontend functionality

--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -1,18 +1,11 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card bg-dark my-5">
-        <div class="card-body">
-          <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
-          <ul class="text-center list-inline py-3">
-            <li class="list-inline-item">
-              <a routerLink="/hallPlanningService" class="btn btn-info">Hall Planning Service</a>
-              <a routerLink="/ticketService" class="btn btn-info">Ticket Service</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <router-outlet></router-outlet>
-    </div>
+  <div class="navbar">
+    <Button routerLink="/hallPlanningService" class="btn btn-primary">Hall Planning Service</Button>
+    <Button routerLink="/ticketService" class="btn btn-primary">Ticket Service</Button>
+    <Button routerLink="/parkingService" class="btn btn-primary">Parking Service</Button>
+    <h1>Cinema 13</h1>
+  </div>
+  <div>
+    <router-outlet></router-outlet>
   </div>
 </div>
