--- a/frontend/frontend/src/app/component/common/show-planning/show-planning.component.html
+++ b/frontend/frontend/src/app/component/common/show-planning/show-planning.component.html
@@ -1,4 +1,32 @@
-<div class="alert alert-info">
- Shrink the browser window size to reduce the number of days in the week.
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Cinemas
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+        <button *ngFor="let cn of cinemaNames" class="dropdown-item" (click)="selectCinema(cn)" type="button">{{cn}}</button>
+    </div>
 </div>
-<mwl-calendar-week-view [viewDate]="viewDate" [daysInWeek]="daysInWeek"></mwl-calendar-week-view>
+
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Movie Hall
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenu3">
+        <div *ngIf="cinema">
+            <button *ngFor="let hall of cinema.halls" class="dropdown-item" (click)="selectHall(hall)" type="button">{{hall.hallNumber}}</button>
+        </div>
+    </div>
+</div>
+
+<ng-template #loading>
+    <div class="text-center">
+      <i class="fa fa-spin fa-spinner fa-5x"></i> <br />
+      Loading movies...
+    </div>
+  </ng-template>
+
+<div *ngIf="hall">
+    <div *ngIf="events.length >0; else loading;">
+        <app-calendar [events]="events"></app-calendar>
+    </div>
+</div>
