Update frontend shopservice

--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -3,6 +3,7 @@
     <Button routerLink="/hallPlanningService" class="btn btn-primary">Hall Planning Service</Button>
     <Button routerLink="/ticketService" class="btn btn-primary">Ticket Service</Button>
     <Button routerLink="/parkingService" class="btn btn-primary">Parking Service</Button>
+    <Button routerLink="/shopService" class="btn btn-primary">Shop Service</Button>
     <h1>Cinema 13</h1>
   </div>
   <div>
