--- a/frontend/frontend/src/app/component/shop-service/list-stock/list-stock.component.html
+++ b/frontend/frontend/src/app/component/shop-service/list-stock/list-stock.component.html
@@ -1,4 +1,3 @@
-<p>list-stock works!</p>
 <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Stock
@@ -13,16 +12,33 @@
             </div>
           </ng-template>
     </div>
-    <div *ngIf="(stock | keyvalue)?.length">
+    <div *ngIf="(prods | keyvalue)?.length">
+        <h2>{{stock.name}}</h2>
         <table class="table">
+            <thead>
+                <tr>
+                    <th>Product Id</th>
+                    <th>Product name</th>
+                    <th># in stock</th>
+                    <th>threshold for restock</th>
+                </tr>
+            </thead>
             <tbody>
-                <div *ngFor="let item of stock | keyvalue">
-                    <th>{{item.key}}</th>
-                    <tr>{{item.value}}</tr>
-                </div>        
+                <tr *ngFor="let item of prodIds">
+                    <td>{{item}}</td>
+                    <td>{{getProd(item).name}}</td>
+                    <td><input type="number" name="amount" [(ngModel)]="stock.amountPerProduct[item]"></td>
+                    <td><input type="number" name="threshold" [(ngModel)]="stock.thresholdPerProduct[item]"></td>
+                </tr>
             </tbody>
         </table>
-    
-        <button  class="btn btn-primary"  (click)="back()">back</button>
+        <button  class="btn btn-primary"  (click)="save()">save</button>
+        
+        <div *ngIf="show && good" (click)="closeAlert()" class="alert alert-success" dismiss-on-timeout="4000" role="alert">
+            {{message}}
+        </div>
+        <div *ngIf="show && !good" (click)="closeAlert()" class="alert alert-danger" dismiss-on-timeout="4000" role="alert">
+            {{message}}
+        </div>
     </div>
 </div>
