--- a/frontend/src/app/component/ticket-service/ticket-service.component.html
+++ b/frontend/src/app/component/ticket-service/ticket-service.component.html
@@ -1,1 +1,54 @@
-<p>ticket-service works!</p>
+<div class="container">
+    <div class="buttons_container">
+        <Button class="btn btn-primary" (click)="getScreenings()">Buy ticket</Button>
+    </div>
+    <p *ngIf="isBuying"><b>Ticket and payment processing......</b></p>
+    <div class="card my-5" *ngIf="!isHidden">
+        <div class="card-body">
+          <table class="table table-bordered table-striped" *ngIf="!isBuying">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">MovieName</th>
+                <th scope="col">Hall number</th>
+                <th scope="col">Day</th>
+                <th scope="col">Start time</th>
+                <th scope="col">Stop time</th>
+                <th scope="col">Available seats</th>
+                <th scope="col">Sold tickets</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let screening of screenings">
+                <td (click)="buyTicket(screening)" id="screeningName" data-toggle="modal" data-target="#buyModal">{{ screening.movieName }}</td>
+                <td>{{ screening.hallNumber }}</td>
+                <td>{{ screening.day }}</td>
+                <td>{{ screening.startHour }}</td>
+                <td>{{ screening.stopHour }}</td>
+                <td>{{ screening.availableSeats }}</td>
+                <td>{{ screening.soldTickets }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="modal" id="buyModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Buy ticket</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Do you wish to buy a ticket for this screening?</p>
+              <p>{{chosenName}} at {{chosenStartTime}} in hall {{chosenHallNumber}}</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="buyAndPayTicket()">Buy and pay ticket</button>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
