--- a/frontend/src/app/component/parking-service/parking-service.component.html
+++ b/frontend/src/app/component/parking-service/parking-service.component.html
@@ -1,9 +1,41 @@
 <div class="container">
+    <div class="alert alert-success" role="alert">
+        When you click a button and nothing happens, please check the network panel. Probably an network call returned an error that will then be specified in the response body.
+      </div>
     <div class="buttons_container">
         <Button class="btn btn-primary" (click)="getNumberOfFreeSpots()">Get number of free spots</Button>
-        <Button class="btn btn-primary" (click)="getAllParkingTickets()">Get tickets</Button>
+        <div class="alert alert-primary" role="alert" *ngIf="showNumber">
+            {{ numberOfFreeSpots }}
+        </div>
         <Button class="btn btn-primary" (click)="getNewParkingTicket()">Get new parking ticket</Button>
-        <Button class="btn btn-primary">Validate ticket</Button>
-        <Button class="btn btn-primary">Exit parking</Button>
+        <div class="alert alert-primary" role="alert" *ngIf="showTicketInfo">
+            ParkingTicket {{ newTicketInfo }}
+        </div>
+        <Button class="btn btn-primary" (click)="validateParkingTicketInit()">Validate ticket</Button>
+        <div class="input-group mb-3" *ngIf="showValidateFields">
+            <div class="input-group-prepend">
+                <span class="input-group-text">Parkingticket ID</span>
+            </div>
+            <input type="number" class="form-control" aria-label="pticket" [(ngModel)]="pTicketId" id="pTicketField">
+            <div class="input-group-prepend">
+                <span class="input-group-text">Cinematicket ID</span>
+            </div>
+            <input type="number" class="form-control" aria-label="pticket" [(ngModel)]="cTicketId" id="cTicketField">
+            <button type="button" class="btn btn-secondary" (click)="validateParkingTicket()">Validate</button>
+        </div>
+        <div class="alert alert-primary" role="alert" *ngIf="showValidatedTicketInfo">
+            ParkingTicket {{ newTicketInfo }}
+        </div>
+        <Button class="btn btn-primary" (click)="exitParkingInit()">Exit parking</Button>
+        <div class="input-group mb-3" *ngIf="showExitParkingFields">
+            <div class="input-group-prepend">
+                <span class="input-group-text">Parkingticket ID</span>
+            </div>
+            <input type="number" class="form-control" aria-label="pticket" [(ngModel)]="exitParkingId" id="pTicketField">
+            <button type="button" class="btn btn-secondary" (click)="exitParking()">Exit</button>
+        </div>
+        <div class="alert alert-primary" role="alert" *ngIf="showExitParkingInfo">
+            {{ exitParkingInfo }}
+        </div>
     </div>
 </div>
