--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,9 +4,11 @@
     <Button routerLink="/ticketService" class="btn btn-primary">Ticket Service</Button>
     <Button routerLink="/parkingService" class="btn btn-primary">Parking Service</Button>
     <Button routerLink="/shopService" class="btn btn-primary">Shop Service</Button>
+    <Button routerLink="/publicityService" class="btn btn-primary">Publicity Service</Button>
     <h1>Cinema 13</h1>
   </div>
   <div>
     <router-outlet></router-outlet>
   </div>
 </div>
+
